--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img1.PNG" class="card-img-top" alt="...">
+            <img src="img1.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Indie India<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -67,7 +67,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img2.PNG" class="card-img-top" alt="...">
+            <img src="img2.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">IndiEnglish<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img3.PNG" class="card-img-top" alt="...">
+            <img src="img3.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Desi Indie<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img4.PNG" class="card-img-top" alt="...">
+            <img src="img4.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Naya Indiestan<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -102,7 +102,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img5.PNG" class="card-img-top" alt="...">
+            <img src="img5.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Hindi Hot Hits<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -112,7 +112,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img6.PNG" class="card-img-top" alt="...">
+            <img src="img6.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">India Hot Hits<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img7.PNG" class="card-img-top" alt="...">
+            <img src="img7.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Top 50: India<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -132,7 +132,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img8.PNG" class="card-img-top" alt="...">
+            <img src="img8.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Top 50: Global<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -148,7 +148,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img10.PNG" class="card-img-top" alt="...">
+            <img src="simg10.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Desi Hits<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -158,7 +158,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img11.PNG" class="card-img-top" alt="...">
+            <img src="img11.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Music Shuttle<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img12.PNG" class="card-img-top" alt="...">
+            <img src="img12.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Bollywood Sundowner<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -178,7 +178,7 @@
       <div class="row">
         <div class="col-lg-md-3 col-sm-6">
           <div class="card" style="width: 12rem;">
-            <img src="sources/img13.PNG" class="card-img-top" alt="...">
+            <img src="simg13.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Happy Vibes<i class="w fa-solid fa-heart"></i></p>
             </div>
@@ -192,7 +192,7 @@
 
   <div class="music">
 
-    <img src="sources/downsong.PNG" alt="">
+    <img src="downsong.PNG" alt="">
     <h5 class="song_name">Navrai Majhi</h5>
 
     <h6 class="singer">Swanand Kirkire,Sunidhi Chauhan</h6>
